@@ -1,3 +1,15 @@
+2014-03-18  Vanessa Gil <vanessa.gil@artica.es>
+	
+	* pandoradb.oracle.sql
+	  pandoradb.postgreSQL.sql
+	  pandoradb.sql
+	  extras/pandoradb_migrate_5.0_to_5.1.mysql.sql
+	  extras/pandoradb_migrate_5.0_to_5.1.oracle.sql
+	  extras/pandoradb_migrate_5.0_to_5.1.postgreSQL.sql
+	  godmode/snmpconsole/snmp_alert.php
+	  godmode/snmpconsole/snmp_view.php: Improved ACLs in
+	SNMP Traps.
+
 2014-03-18  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* godmode/agentes/configurar_agente.php,
